<resources>
    <string name="app_name">School Platform</string>
    <string name="jsonUsuarios">
        {
            "usuarios" : [
                {
                    "nombre":"'Katherine Arzate'",
                    "noControl":"18121684",
                    "carrera":"TICS",
                    "semestre":6,
                    "contrasena":"123"
                },
                {
                    "nombre":"'Mauricio Gutierrez'",
                    "noControl":"18121600",
                    "carrera":"Sistemas",
                    "semestre":5,
                    "contrasena":"12345"
                }
            ]
        }
    </string>
    <string name="noControl">Control number</string>
    <string name="contrasena">Password</string>
    <string name="login">Log in</string>
    <string name="btnlogin">Enter</string>
    <string name="linkSignin">Don\'t have an account? <u>Sign in</u></string>
    <string name="signin">Sign in</string>
    <string name="nombre">Name</string>
    <string name="carrera">Career</string>
    <string name="semestre">Semester</string>
    <string name="calificaciones">Scores</string>
    <string name="horario">Schedule</string>
    <string name="reticula">Progress</string>
    <string name="datosPersonales">Personal data</string>
    <string name="btnSalir">Log out</string>
</resources>