<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:padding="80dp"
    android:gravity="center_vertical">

    <Button
        android:id="@+id/calificaciones"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/calificaciones"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/horario"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/horario"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/reticula"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/reticula"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/datosPersonales"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/datosPersonales"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/salir"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btnSalir"
        android:layout_gravity="center"/>

</LinearLayout>