<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosPersonalesActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8CAE8F8"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/datosPersonales"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noControl"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/numeroControlDP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/nombreDP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrera"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/carreraDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semestre"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/semestreDP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/contrasenaDP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

    </LinearLayout>

</LinearLayout>